[package]
authors = ["Lasm Gratel"]
description = "Start and stop system for applications to save your budget on hourly billing VPS."
documentation = "https://docs.rs/stt"
edition = "2021"
homepage = "https://github.com/LasmGratel/STT"
license = "GPL-3.0"
name = "stt"
readme = "README.md"
repository = "https://github.com/LasmGratel/stt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-minecraft-ping = "0.8"
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1"
toml = "0.7.1"
bytes = "1.3"

[dependencies.tokio]
features = [
  "macros",
  "rt-multi-thread",
  "sync"
]
version = "1.24"
